<resources>
    <string name="app_name">AlphaBox</string>

    <string name="dialog_ok_action">OK</string>
    <string name="dialog_cancel_action">Cancel</string>
    <string name="dialog_positive_action">Yes</string>
    <string name="dialog_negative_action">No</string>

    <string name="activity_login_username_hint">Email</string>
    <string name="activity_login_password_hint">Password</string>
    <string name="activity_login_password_repeat_hint">Repeat Password</string>
    <string name="activity_login_button_login_label">Login</string>
    <string name="activity_login_button_register_label">Register</string>
    <string name="activity_login_register_label">Haven\'t account? Register now!</string>
    <string name="activity_login_username_required">Email is required to %1$s</string>
    <string name="activity_login_password_required">Password is required to %1$s</string>
    <string name="activity_login_repeat_password_required">Repeated password is required to %1$s</string>
    <string name="activity_login_login_error_label">login</string>
    <string name="activity_login_register_error_label">register</string>
    <string name="activity_login_different_password">Password not matches</string>
    <string name="activity_login_auth_failed">Login failed. Unexpected reason.</string>

    <string name="activity_main_exit_on_double_press">Please click BACK again to exit</string>
    <string name="activity_main_title">Selecting .apk</string>
    <string name="activity_main_menu_logout">Logout</string>
    <string name="activity_main_menu_apk_list">Shared apks</string>
    <string name="activity_main_apk_not_loaded">Apk file not loaded</string>
    <string name="activity_main_apk_loaded">Apk file loaded</string>
    <string name="activity_main_apk_size_label">File size:</string>
    <string name="activity_main_apk_size"> %1$s Mb</string>
    <string name="activity_main_send_apk_description">Send apk file</string>
    <string name="activity_main_remove_apk_description">Remove selected apk file</string>
    <string name="activity_main_dialog_logout_title">Warning</string>
    <string name="activity_main_dialog_logout_message">Are you sure you want to login out?</string>

    <string name="activity_profile_scene_title">Profile</string>
    <string name="activity_profile_button_logout">Logout</string>

    <string name="connection_problem_message">No Internet connection</string>
</resources>
